# helion-testing

./: README.md  gpu_run.sbatch  main.py  pyproject.toml
slurm/: slurm_48655768.err  slurm_48655768.out  slurm_48656275.err  slurm_48656275.out  slurm_48656582.err  slurm_48656582.out  slurm_48657983.err  slurm_48657983.out  slurm_48658055.err  slurm_48658055.out  slurm_48658427.err  slurm_48658427.out  slurm_48658444.err  slurm_48658444.out  slurm_48658501.err  slurm_48658501.out  slurm_48659005.err  slurm_48659005.out  slurm_48659319.err  slurm_48659319.out  slurm_48659495.err  slurm_48659495.out  slurm_48661075.err  slurm_48661075.out
