[project]
name = "helion-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "triton>=3.5.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "helion>=0.2.6",
    "packaging>=25.0",
    "pytest>=9.0.1",
    "logging>=0.4.9.6",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
